--- a/_posts/20240920.md
+++ b/_posts/20240920.md
@@ -365,7 +365,7 @@ plt.ylabel('Mean Squared Error')
 plt.title('Kernel Comparison Based on 10-Fold Cross-Validation')
 plt.show()
 ```
-![alt text](kernel_outputs.png "Title")
+![Alt Text]("https://imgur.com/a/Xvbto01)
 
 ![image-20240920233946295](C:\Users\Yera\AppData\Roaming\Typora\typora-user-images\DATA440HW1)
 
