--- a/_posts/20240920.md
+++ b/_posts/20240920.md
@@ -250,12 +250,7 @@ plt.ylabel('Predicted Values')
 plt.title('Predicted vs Actual Values')
 plt.show()
 ```
-
-![image-20240920234600948](C:\Users\Yera\AppData\Roaming\Typora\typora-user-images\image-20240920234600948.png)
-
-
-
-
+<img src="predicted_comparison.png" alt="predicted values comparison">
 
 ```python
 residuals = y_test - y_pred
@@ -267,7 +262,7 @@ plt.title('Residual Plot')
 plt.show()
 ```
 
-![image-20240920234824379](C:\Users\Yera\AppData\Roaming\Typora\typora-user-images\image-20240920234824379.png)
+<img src="residuals_output.png" alt="residual graph">
 
 From this graph, we can see that most residuals are around zero. This signifies that the model has successfully captured the relationship between the features and the target variable. The predictions seem to be accurate since there are only small amount of differences between predicted and actual value. 
 
@@ -365,8 +360,6 @@ plt.ylabel('Mean Squared Error')
 plt.title('Kernel Comparison Based on 10-Fold Cross-Validation')
 plt.show()
 ```
-![Alt Text](https://imgur.com/4WIqYzA)
-
-![image-20240920233946295](C:\Users\Yera\AppData\Roaming\Typora\typora-user-images\DATA440HW1)
+<img src="kernels_output.png" alt="kernel graph comparison">
 
 The first four bars are similar in height, especially the middle three, which means that they have similar performance. Cauchy shows a significant amount of decrease in mean squared error, signifying that it was likely that the dataset had a lot of distant values that was better not being accounted for. However, this dataset was small, so there needs to be further testing on it. 
