--- a/_posts/2024-10-18-DATA440HW3.md
+++ b/_posts/2024-10-18-DATA440HW3.md
@@ -1,3 +1,11 @@
+---
+title: DATA 440 HW 3
+categories:
+- General
+feature_image: "https://picsum.photos/2560/600?image=872"
+---
+# **SCAD**
+
 ```python
 import torch
 import torch.nn as nn
