--- a/_posts/2024-10-18-DATA440HW3.md
+++ b/_posts/2024-10-18-DATA440HW3.md
@@ -199,8 +199,7 @@ feature_importance = analyze_feature_importance(scad_concrete, feature_names)
 # Plot feature importance
 plot_feature_importance(feature_importance)
 ```
-
-Feature Importance Based on SCAD Coefficients.png
+![FeatureImportanceBasedonSCADCoefficients]({{ site.baseurl }}/assets/images/Feature.png)
 
 ```python
 def cross_validation_sqrtlasso(X_train, y_train, alphas, num_folds=5, num_epochs=1000, lr=0.01):
@@ -384,10 +383,8 @@ plt.ylabel('R² Score')
 plt.title('R² Score Comparison Across Models')
 plt.show()
 ```
-
-Feature2.png
-
-R2Score.png
+![FeatureImportanceBasedonSCADCoefficients2]({{ site.baseurl }}/assets/images/Feature2.png)
+![R2Score]({{ site.baseurl }}/assets/images/R2Score.png)
 
 ```python
 import numpy as np
@@ -452,12 +449,10 @@ print(f"R² SCAD: {r2_scad}")
 print(f"R² ElasticNet: {r2_en}")
 print(f"R² SqrtLasso: {r2_sl}")
 ```
+![coefficient1]({{ site.baseurl }}/assets/images/coefficient1.png)
+![coefficient2]({{ site.baseurl }}/assets/images/coefficient2.png)
+![coefficient3]({{ site.baseurl }}/assets/images/coefficient3.png)
 
-coefficient1.png
-
-coefficient2.png
-
-coefficient3.png
 
 R² SCAD: -0.0016019338370691916 <br>R² ElasticNet: 0.9966055989636963 <br>R² SqrtLasso: 0.9975080250229935
 
@@ -516,8 +511,6 @@ sqrtlasso_mse = betastar_recovery(betastar, sqrtlasso_coefficients)
 
 Coefficient MSE: 0.7635819991995422
 
-betastar1.pnpg
-
-betastar2.png
-
-betastar3.png
+![betastar1]({{ site.baseurl }}/assets/images/betastar1.png)
+![betastar2]({{ site.baseurl }}/assets/images/betastar2.png)
+![betastar3]({{ site.baseurl }}/assets/images/betastar3.png)
