--- a/_posts/2024-10-18-DATA440HW3.md
+++ b/_posts/2024-10-18-DATA440HW3.md
@@ -511,6 +511,6 @@ sqrtlasso_mse = betastar_recovery(betastar, sqrtlasso_coefficients)
 
 Coefficient MSE: 0.7635819991995422
 
-![betastar1]({{ site.baseurl }}/assets/images/betastar1.png)
+![betastar1]({{ site.baseurl }}/assets/betastar1.png)
 ![betastar2]({{ site.baseurl }}/assets/images/betastar2.png)
 ![betastar3]({{ site.baseurl }}/assets/images/betastar3.png)
