--- a/_posts/2024-09-29-HW2.md
+++ b/_posts/2024-09-29-HW2.md
@@ -6,7 +6,7 @@ feature_image: "https://picsum.photos/2560/600?image=872"
 ---
 
 
-# **Evaluating Gradient Boosting with Locally Weighted Regression and Performance of Locally Weighted Logistic Regression: A Comparative Study**
+**Evaluating Gradient Boosting with Locally Weighted Regression and Performance of Locally Weighted Logistic Regression: A Comparative Study**
 
 
 
