--- a/_posts/2024-09-20-HW1.md
+++ b/_posts/2024-09-20-HW1.md
@@ -5,7 +5,7 @@ categories:
 feature_image: "https://picsum.photos/2560/600?image=872"
 ---
 
-**Locally Weighted Regression** **(LOWESS)**
+**Locally Weighted Regression (LOWESS)**
 
 
 
