--- a/_posts/2024-10-18-HW3.md
+++ b/_posts/2024-10-18-HW3.md
@@ -4,7 +4,7 @@ categories:
 - General
 feature_image: "https://picsum.photos/2560/600?image=872"
 ---
-**SCAD**
+**PyTorch with Smoothly Clipped Absolute Deviations (SCAD)**
 
 ```python
 import torch
