--- a/_posts/2024-10-18-HW3.md
+++ b/_posts/2024-10-18-HW3.md
@@ -4,13 +4,46 @@ categories:
 - General
 feature_image: "https://picsum.photos/2560/600?image=872"
 ---
-**PyTorch with Smoothly Clipped Absolute Deviations (SCAD)**
+# **Smoothly Clipped Absolute Deviation (SCAD) penalty**
+
+--------------------
+
+Smoothly Clipped Absolute Deviation (SCAD) is a non-concave penalty function [Fan and Li (2001)](https://fan.princeton.edu/sites/g/files/toruqf5476/files/documents/penlike.pdf). It aims to solve variable selection bias problem that comes from other methods such as LASSO regression. 
+
+The function goes as follows:
+$$
+p_{\lambda}^{SCAD}(\beta_j) = 
+\begin{cases} 
+  \lambda |\beta_j| & \text{if } |\beta_j| \leq \lambda, \\
+  \frac{a\lambda|\beta_j| - 0.5(\beta_j^2 + \lambda^2)}{a-1} & \text{if } \lambda < |\beta_j| \leq a\lambda, \\
+  \frac{(a+1)\lambda^2}{2} & \text{if } |\beta_j| > a\lambda.
+\end{cases}
+$$
 
 
+For more references on SCAD, please visit:
+
+1. https://andrewcharlesjones.github.io/journal/scad.html
+2. https://www.jstor.org/stable/27640214?seq=1
+3. https://www.mayo.edu/research/documents/scad-documentationpdf/DOC-10026887
+4. https://fan.princeton.edu/sites/g/files/toruqf5476/files/documents/penlike.pdf
+
+
+
+Import necessary library
 
 ```python
 import torch
 import torch.nn as nn
+import numpy as np
+import pandas as pd
+import matplotlib.pyplot as plt
+from scipy.linalg import toeplitz
+
+from sklearn.metrics import r2_score
+from sklearn.linear_model import ElasticNet as SklearnElasticNet
+from sklearn.preprocessing import PolynomialFeatures, StandardScaler
+from sklearn.model_selection import KFold, train_test_split, GridSearchCV
 ```
 
 ```python
@@ -21,7 +54,6 @@ class SCADRegression(nn.Module):
         self.beta = nn.Parameter(torch.randn(input_dim, dtype=torch.float64, device=device) * 0.01)
         self.a = a
         self.lambda_ = lambda_
-
 
     def scad_penalty(self, beta):
         lambda_ = self.lambda_
@@ -54,7 +86,9 @@ class SCADRegression(nn.Module):
 
     def get_coefficients(self):
         return self.beta.detach().cpu().numpy()
+```
 
+```python
 class ElasticNet(nn.Module):
     def __init__(self, input_size, alpha=1.0, l1_ratio=0.5):
         super(ElasticNet, self).__init__()
@@ -87,7 +121,9 @@ class ElasticNet(nn.Module):
 
     def get_coefficients(self):
         return self.linear.weight.detach().cpu().numpy()
+```
 
+```python
 class SqrtLasso(nn.Module):
     def __init__(self, input_size, alpha=0.1):
         super(SqrtLasso, self).__init__()
@@ -120,10 +156,9 @@ class SqrtLasso(nn.Module):
         return self.linear.weight.detach().cpu().numpy()
 ```
 
-```python
-from sklearn.model_selection import KFold
-import numpy as np
 
+
+```python
 def cross_validation_scad(X_train, y_train, lambdas, num_folds=5, num_epochs=1000, lr=0.05):
     best_lambda = None
     best_mse = float('inf')
@@ -157,11 +192,13 @@ scad_concrete = cross_validation_scad(X_train_tensor, y_train_tensor, lambdas)
 
 Best Lambda for SCAD: 100, MSE: 1569.8834545138045
 
+
+
+Now we evaluate feature importance based on the SCAD coefficients from the model.
+
 ```python
-# Analyze and print feature importance
 def analyze_feature_importance(scad_model, feature_names):
     coefficients = scad_model.get_coefficients()
-    print("SCAD Coefficients:", coefficients)  # Print coefficients to check
     selected_indices = np.where(coefficients != 0)[0]
 
     if len(selected_indices) == 0:
@@ -173,14 +210,19 @@ def analyze_feature_importance(scad_model, feature_names):
 
     # Sort by absolute value of coefficients
     importance = sorted(zip(selected_features, important_coeffs), key=lambda x: abs(x[1]), reverse=True)
-
     print("Selected Features and Their Importance (in descending order):")
     for feature, coeff in importance:
         print(f"{feature}: {coeff}")
 
     return importance
+```
 
-# Visualize feature importance if there are selected features
+analyze_feature_importance function identifies which features have non-zero coefficients which are already selected by SCAD regularization and sorts them by importance.
+We can interpret the results of the SCAD and see which variables are important.  
+
+
+
+```python
 def plot_feature_importance(importance):
     if not importance:
         print("No features to plot.")
@@ -194,14 +236,18 @@ def plot_feature_importance(importance):
     plt.gca().invert_yaxis()
     plt.show()
 
-# Run feature importance analysis after training SCAD
 feature_names = poly.get_feature_names_out(input_features=data.columns.drop('strength'))
 feature_importance = analyze_feature_importance(scad_concrete, feature_names)
 
-# Plot feature importance
 plot_feature_importance(feature_importance)
 ```
 ![FeatureImportanceBasedonSCADCoefficients]({{ site.baseurl }}/assets/images/Feature.png)
+
+
+
+
+
+
 
 ```python
 def cross_validation_sqrtlasso(X_train, y_train, alphas, num_folds=5, num_epochs=1000, lr=0.01):
@@ -235,19 +281,9 @@ alphas = [0.001, 0.01, 0.1, 1, 10]
 sqrt_lasso_concrete = cross_validation_sqrtlasso(X_train_tensor, y_train_tensor, alphas)
 ```
 
-Best Alpha for SqrtLasso: 0.01, MSE: 1414.251638621219
+Best Alpha for SqrtLasso: 0.01<br>MSE: 1414.251638621219
 
 ```python
-import pandas as pd
-import torch
-import torch.nn as nn
-from sklearn.preprocessing import PolynomialFeatures, StandardScaler
-from sklearn.model_selection import train_test_split, GridSearchCV
-from sklearn.metrics import r2_score
-import matplotlib.pyplot as plt
-from sklearn.linear_model import ElasticNet as SklearnElasticNet
-import numpy as np
-
 # Load the dataset - use concrete.csv
 data = pd.read_csv("https://github.com/dvasiliu/AAML/blob/main/Data%20Sets/concrete.csv?raw=true")
 
@@ -389,11 +425,6 @@ plt.show()
 ![R2Score]({{ site.baseurl }}/assets/images/R2Score.png)
 
 ```python
-import numpy as np
-from scipy.linalg import toeplitz
-import matplotlib.pyplot as plt
-from sklearn.metrics import r2_score
-
 def make_correlated_features(num_samples, p, rho=0.9):
     vcor = [rho ** i for i in range(p)]
     r = toeplitz(vcor)
@@ -482,6 +513,12 @@ print("SqrtLasso Coefficients:", sqrt_lasso_coeffs)
 ```
 
 SCAD Coefficients: [ 2.45916168e-03  1.85347900e-03 -3.59173345e-03 -6.04682384e-04 -6.59646528e-04  7.93157710e-04 -7.49979641e-04 -2.94007673e-03  1.07287430e-03  1.33466781e-03 -9.46859899e-04 -3.29887543e-05 -2.77498508e-04 -5.84661320e-04  1.01204747e-03 -1.34239949e-03 -2.51593613e-04  6.25854166e-04 -3.17518449e-03  1.58764215e-03] <br>ElasticNet Coefficients: [[ 1.35389039e+00 -1.60259898e+00  2.55595019e+00  2.37184074e-01  -9.46587857e-02  2.63863333e-02 -1.17797258e-02  9.14454197e-03   1.55244149e-05 -1.85317917e-05  5.15759223e-02 -2.12430900e-02  -2.21067454e-02 -9.03497633e-05  3.44286496e-02 -1.02714118e-04  -4.24956335e-03  7.91087542e-05 -2.39551627e-02 -1.69121212e-02]] <br>SqrtLasso Coefficients: [[ 1.41108394e+00 -1.82309053e+00  2.89791304e+00 -1.13297565e-03   6.10349581e-04 -1.40416827e-04  1.71157831e-05 -6.99102342e-04   2.26917526e-03 -2.66756442e-04 -1.95184244e-04  9.79365517e-04  -1.58837599e-03  8.24952334e-04  3.48673416e-04  1.19658394e-03   1.71500240e-03 -1.56332052e-03 -4.59104510e-04 -4.27808550e-04]]
+
+
+
+-----
+
+**Test and Evaluate the models**
 
 ```python
 def betastar_recovery(true_beta, estimated_beta):
