--- a/_posts/2024-10-18-HW3.md
+++ b/_posts/2024-10-18-HW3.md
@@ -243,10 +243,8 @@ plot_feature_importance(feature_importance)
 ```
 ![FeatureImportanceBasedonSCADCoefficients]({{ site.baseurl }}/assets/images/Feature.png)
 
-
-
-
-
+There are many features that influence the outcome. Many of them effect it positively (bar to the right), such as cement age, superplastic age, and water.
+There are some features that impact outcome negatively such as slag water. A few are not important of close to 0. By looking at the result, we can conclude which features are matter to most in handling concrete. 
 
 
 ```python
@@ -421,8 +419,13 @@ plt.ylabel('R² Score')
 plt.title('R² Score Comparison Across Models')
 plt.show()
 ```
-![FeatureImportanceBasedonSCADCoefficients2]({{ site.baseurl }}/assets/images/Feature2.png)
 ![R2Score]({{ site.baseurl }}/assets/images/R2Score.png)
+
+SCAD model has R2 score around -4.5. It has a poor performance.
+ElasticNet model is close to 0, slightly positive yet still does not show great performance.
+SqrtLasso model is around -4 and does not do well in predicting. 
+Out of three, ElasticNet performs the best. 
+The reason for this may be because this was performed on the real data and the hyperparameters were not explored well. 
 
 ```python
 def make_correlated_features(num_samples, p, rho=0.9):
@@ -483,9 +486,12 @@ print(f"R² ElasticNet: {r2_en}")
 print(f"R² SqrtLasso: {r2_sl}")
 ```
 ![coefficient1]({{ site.baseurl }}/assets/images/coefficient1.png)
+R2 for SCAD is -0.0016, showing that this performed poorly. 
 ![coefficient2]({{ site.baseurl }}/assets/images/coefficient2.png)
+R2 for ElasticNet is 0.9966, which means this performed extremely well.
 ![coefficient3]({{ site.baseurl }}/assets/images/coefficient3.png)
-
+R2 for SqrtLasso was 0.9975, and this performed even better than ElasticNet. 
+It seems like ElasticNet and SqrtLasso are very effective in capturing these kind of data. 
 
 R² SCAD: -0.0016019338370691916 <br>R² ElasticNet: 0.9966055989636963 <br>R² SqrtLasso: 0.9975080250229935
 
@@ -548,8 +554,11 @@ elasticnet_mse = betastar_recovery(betastar, elasticnet_coefficients)
 sqrtlasso_mse = betastar_recovery(betastar, sqrtlasso_coefficients)
 ```
 
+![betastar1]({{ site.baseurl }}/assets/images/betastar1.png)
 Coefficient MSE: 0.7635819991995422
 
-![betastar1]({{ site.baseurl }}/assets/betastar1.png)
 ![betastar2]({{ site.baseurl }}/assets/images/betastar2.png)
+Coefficient MSE: 0.02241271788600953
+
 ![betastar3]({{ site.baseurl }}/assets/images/betastar3.png)
+Coefficient MSE: 0.0024821846656431596
