--- a/_posts/2024-10-18-HW3.md
+++ b/_posts/2024-10-18-HW3.md
@@ -8,18 +8,20 @@ feature_image: "https://picsum.photos/2560/600?image=872"
 
 --------------------
 
-Smoothly Clipped Absolute Deviation (SCAD) is a non-concave penalty function [Fan and Li (2001)](https://fan.princeton.edu/sites/g/files/toruqf5476/files/documents/penlike.pdf). It aims to solve variable selection bias problem that comes from other methods such as LASSO regression. 
+Smoothly Clipped Absolute Deviation (SCAD) is a non-concave penalty function [Fan and Li (2001)](https://fan.princeton.edu/sites/g/files/toruqf5476/files/documents/penlike.pdf). It aims to solve variable selection bias problem that comes from other methods such as LASSO regression while retaining sparcity.
 
 The function goes as follows:
-$$
-p_{\lambda}^{SCAD}(\beta_j) = 
+
+$$p_{\lambda}^{SCAD}(\beta_j) = 
 \begin{cases} 
   \lambda |\beta_j| & \text{if } |\beta_j| \leq \lambda, \\
   \frac{a\lambda|\beta_j| - 0.5(\beta_j^2 + \lambda^2)}{a-1} & \text{if } \lambda < |\beta_j| \leq a\lambda, \\
   \frac{(a+1)\lambda^2}{2} & \text{if } |\beta_j| > a\lambda.
-\end{cases}
-$$
+\end{cases}$$
 
+In this assignment, ElasticNet and SqrtLasso will further be used to compare their efficiency in different areas, as they are all popular for handling high-dimensional data. ElasticNet, a combination of Lasso and Ridge, manages correlated features and does variable selection. SqrtLasso is a improvement of Lasso by incorporating the square root of the residual sum of squares, effectively reducing noise. 
+
+PyTorch will be further be used and the models will be applied on both simulated and real datasets. Their performance will be measured with R2 score and mean squared error (MSE).
 
 For more references on SCAD, please visit:
 
@@ -556,9 +558,18 @@ sqrtlasso_mse = betastar_recovery(betastar, sqrtlasso_coefficients)
 
 ![betastar1]({{ site.baseurl }}/assets/images/betastar1.png)
 Coefficient MSE: 0.7635819991995422
+This is a high error. It did a poor job in recovering the true coefficients. SCAD did not capture the sparcity pattern of betas well. 
 
 ![betastar2]({{ site.baseurl }}/assets/images/betastar2.png)
 Coefficient MSE: 0.02241271788600953
+This is a moderate error. ElasticNet is better at SCAD yet it still can improve. 
 
 ![betastar3]({{ site.baseurl }}/assets/images/betastar3.png)
 Coefficient MSE: 0.0024821846656431596
+SqrtLasso did very well in capturing the true betas. 
+<br>
+In conclusion, SCAD did not perform well, most likely its need for more tuning and sensitivity to the complexity of the real datasets.<br>
+ElasticNet performed reasonably well with R2 score close to 1 in both simulated and real datasets, which makes it a good choices when data has correlated features. <br>
+SqrtLasso performs best. It had the smallest coefficient MSE and the highest R2 score in both datasets, which showed its capability to capture sparse signals and reduce noise. <br>
+
+Further experiments with SCAD is necessary as it is a good variable selection method yet depending on datasets ElasticNet and SqrtLasso may be more reliable. 
