--- a/_posts/2024-10-18-HW3.md
+++ b/_posts/2024-10-18-HW3.md
@@ -10,14 +10,14 @@ feature_image: "https://picsum.photos/2560/600?image=872"
 
 Smoothly Clipped Absolute Deviation (SCAD) is a non-concave penalty function [Fan and Li (2001)](https://fan.princeton.edu/sites/g/files/toruqf5476/files/documents/penlike.pdf). It aims to solve variable selection bias problem that comes from other methods such as LASSO regression while retaining sparcity.
 
-The function goes as follows:
+<!-- The function goes as follows:
 
 $$p_{\lambda}^{SCAD}(\beta_j) = 
 \begin{cases} 
   \lambda |\beta_j| & \text{if } |\beta_j| \leq \lambda, \\
   \frac{a\lambda|\beta_j| - 0.5(\beta_j^2 + \lambda^2)}{a-1} & \text{if } \lambda < |\beta_j| \leq a\lambda, \\
   \frac{(a+1)\lambda^2}{2} & \text{if } |\beta_j| > a\lambda.
-\end{cases}$$
+\end{cases}$$ -->
 
 In this assignment, ElasticNet and SqrtLasso will further be used to compare their efficiency in different areas, as they are all popular for handling high-dimensional data. ElasticNet, a combination of Lasso and Ridge, manages correlated features and does variable selection. SqrtLasso is a improvement of Lasso by incorporating the square root of the residual sum of squares, effectively reducing noise. 
 
@@ -557,15 +557,15 @@ sqrtlasso_mse = betastar_recovery(betastar, sqrtlasso_coefficients)
 ```
 
 ![betastar1]({{ site.baseurl }}/assets/images/betastar1.png)
-Coefficient MSE: 0.7635819991995422
+Coefficient MSE: 0.7635819991995422<br>
 This is a high error. It did a poor job in recovering the true coefficients. SCAD did not capture the sparcity pattern of betas well. 
 
 ![betastar2]({{ site.baseurl }}/assets/images/betastar2.png)
-Coefficient MSE: 0.02241271788600953
+Coefficient MSE: 0.02241271788600953<br>
 This is a moderate error. ElasticNet is better at SCAD yet it still can improve. 
 
 ![betastar3]({{ site.baseurl }}/assets/images/betastar3.png)
-Coefficient MSE: 0.0024821846656431596
+Coefficient MSE: 0.0024821846656431596<br>
 SqrtLasso did very well in capturing the true betas. 
 <br>
 In conclusion, SCAD did not perform well, most likely its need for more tuning and sensitivity to the complexity of the real datasets.<br>
