--- a/_posts/2024-09-29-HW2.md
+++ b/_posts/2024-09-29-HW2.md
@@ -1,11 +1,11 @@
 ---
-title: DATA 440 HW 2
+title: Gradient Boosting with Locally Weighted Regression (LOWESS) 
 categories:
 - General
 feature_image: "https://picsum.photos/2560/600?image=872"
 ---
 
-**Gradient Boosting with Locally Weighted Regression (LOWESS)**
+**DATA 440 HW 2**
 
 
 
