--- a/_posts/2024-10-18-HW3.md
+++ b/_posts/2024-10-18-HW3.md
@@ -1,10 +1,10 @@
 ---
-title: HW 3
+title: Smoothly Clipped Absolute Deviation (SCAD) penalty 
 categories:
 - General
 feature_image: "https://picsum.photos/2560/600?image=872"
 ---
-**Smoothly Clipped Absolute Deviation (SCAD) penalty**
+**DATA 440 HW 3**
 
 --------------------
 
