--- a/_posts/2024-09-20-HW1.md
+++ b/_posts/2024-09-20-HW1.md
@@ -1,11 +1,11 @@
 ---
-title: DATA 440 HW 1
+title: Locally Weighted Regression (LOWESS) 
 categories:
 - General
 feature_image: "https://picsum.photos/2560/600?image=872"
 ---
 
-**Locally Weighted Regression (LOWESS)**
+**DATA 440 HW 1**
 
 
 
