--- a/_posts/2024-11-10-HW4.md
+++ b/_posts/2024-11-10-HW4.md
@@ -1,9 +1,9 @@
 ---
-title: DATA 440 HW 4
+title: Classification with Data Imbalance
 categories:
 - General
 feature_image: "https://picsum.photos/2560/600?image=872"
 ---
-**Classification with Data Imbalance**
+**DATA 440 HW 4**
 
 --------------------
