--- a/_posts/2024-09-20-HW1.md
+++ b/_posts/2024-09-20-HW1.md
@@ -1,11 +1,11 @@
 ---
-title: Locally Weighted Regression (LOWESS) 
+title: 2024-09-20 DATA 440 HW 1
 categories:
 - General
 feature_image: "https://picsum.photos/2560/600?image=872"
 ---
 
-**DATA 440 HW 1**
+**Locally Weighted Regression (LOWESS) **
 
 
 
