--- a/_posts/2024-12-16-final.md
+++ b/_posts/2024-12-16-final.md
@@ -1,10 +1,10 @@
 ---
-title: Classification with Data Imbalance
+title: Waste Vehicle Optimization
 categories:
 - General
 feature_image: "https://picsum.photos/2560/600?image=872"
 ---
-***DATA 440 HW 4**
+***DATA 440 Final**
 
 --------------------
 
